Bug 426611 - events set to "All Day" by default
Summary: events set to "All Day" by default
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.15.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-16 14:20 UTC by grannie
Modified: 2025-04-15 12:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description grannie 2020-09-16 14:20:34 UTC
events set to "All Day" by default
In settings you cant set a default value for "All Day" - which is obviously: false :D
Comment 1 Allen Winter 2020-09-16 17:01:42 UTC
Allday is pre-selected for you in various situations where it makes sense.

You are correct that there is no configuration for default new events as "all-day" 

I would need to know how to reproduce where a pre-selected all-day value is incorrect.
Comment 2 grannie 2020-09-16 22:33:01 UTC
I think its false to assume that each new event is an all day event.
I mean its not very intuitive i think. Or maybe im using korganizer the wrong way..
If i double click on a day (monthly view) I want to add an appointment for that day - that is rarely the whole day
Comment 3 Bug Janitor Service 2025-03-28 13:43:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/112
Comment 4 Allen Winter 2025-03-28 14:17:05 UTC
Git commit e953afba9a5490d3253e9cf7e1b4eb2f0c219e62 by Allen Winter.
Committed on 28/03/2025 at 13:40.
Pushed by winterz into branch 'master'.

Monthview - no longer force new events to be allDay (in some situations)

Set the start and end times for creating new events in month view
according to the adjusted default starttime and duration.

Previously this wasn't the case for double-clicking in a cell
nor when selecting "New Event" from the date navigator.

M  +10   -2    src/eventview.cpp
M  +6    -1    src/month/monthscene.cpp
M  +1    -0    src/month/monthscene.h
M  +45   -8    src/month/monthview.cpp

https://invent.kde.org/pim/eventviews/-/commit/e953afba9a5490d3253e9cf7e1b4eb2f0c219e62
Comment 5 Allen Winter 2025-04-15 12:40:45 UTC
Git commit f1b6d939226fa77ff2bf969a50e6a5cfcfd46599 by Allen Winter.
Committed on 15/04/2025 at 11:38.
Pushed by winterz into branch 'release/25.04'.

Monthview - no longer force new events to be allDay (in some situations)

Set the start and end times for creating new events in month view
according to the adjusted default starttime and duration.

Previously this wasn't the case for double-clicking in a cell
nor when selecting "New Event" from the date navigator.


(cherry picked from commit e953afba9a5490d3253e9cf7e1b4eb2f0c219e62)

Co-authored-by: Allen Winter <winter@kde.org>

M  +10   -2    src/eventview.cpp
M  +6    -1    src/month/monthscene.cpp
M  +1    -0    src/month/monthscene.h
M  +45   -8    src/month/monthview.cpp

https://invent.kde.org/pim/eventviews/-/commit/f1b6d939226fa77ff2bf969a50e6a5cfcfd46599