Monthview - no longer force new events to be allDay (in some situations)

Set the start and end times for creating new events in month view
according to the adjusted default starttime and duration.

Previously this wasn't the case for double-clicking in a cell
nor when selecting "New Event" from the date navigator.

BUG: 426611